added use of JdbcTemplate